--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,9 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div class="jumbotron jumbotron-fluid w-100">
+    <div class="container w-100 mx-0">
+      <h1 class="display-4">Fluidç jumbotron</h1>
+      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    </div>
+  </div>
+  
