--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,9 +1,30 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<div class="jumbotron jumbotron-fluid w-100">
-    <div class="container w-100 mx-0">
-      <h1 class="display-4">Fluidç jumbotron</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+
+
+<!--
+<section class="bsb-hero-1 px-0 bsb-overlay bsb-hover-pull" style="background-image: url('./assets/img/hero-img-1.jpg');">
+  <div>
+    <div>
+      <div class="col-12 col-md-11 col-lg-9 col-xl-7 col-xxl-6 text-center text-white w-100">
+        <h2 class="display-3 fw-bold mb-3 bg-light mt-5" style="font-size: 90px; font-weight: bolder; color: black;">One Page Wonder</h2>
+        <p class="lead mb-5 bg-light" style="font-size: 60px; font-weight: bold; color: black;">Will Knock Your Socks Off</p>
+      </div>
     </div>
   </div>
-  
+</section>
+-->
+
+<div class="pt-4 pb-4 px-0 text-center bg-image rounded-3" style="
+    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
+    height: 400px;
+  ">
+  <div class="mask";>
+    <div class="justify-content-center align-items-center h-100 w-100">
+      <div class="text-white">
+        <h2 class="display-3 fw-bold mb-3 bg-light mt-5" style="font-size: 90px; font-weight: bolder; color: black;">One Page Wonder</h2>
+        <p class="lead mb-3 bg-light" style="font-size: 60px; font-weight: bold; color: black;">Will Knock Your Socks Off</p>
+      </div>
+    </div>
+  </div>
+</div>
