--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -4,13 +4,13 @@
         <div class="row g-0">       
             <div class="col-md-8">
                 <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">This First Heading</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="../assets/img/2.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="../../website/assets/img/1.jpg" class="img-fluid rounded-start" alt="...">
             </div>
         </div>
     </div>
