--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,6 +1,8 @@
 <!-- your html code here -->
+<div class="container-fluid">
 <h1>Contact</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum adipisci, optio nihil tempore doloribus inventore natus voluptatum aspernatur culpa esse architecto, harum dolor quae placeat quisquam accusamus quis perferendis atque?</p>
+<div class="container me-3 border border-1">
 <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">Your E-mail</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email">
@@ -9,3 +11,8 @@
     <label for="exampleFormControlTextarea1" class="form-label">Your message</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Please enter your message here..." rows="3"></textarea>
   </div>
+  <div class="d-flex justify-content-end">
+  <input class="btn btn-primary" type="submit" value="Submit">
+</div>
+</div>
+</div>
