--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -2,25 +2,10 @@
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
 
 
-<!--
-<section class="bsb-hero-1 px-0 bsb-overlay bsb-hover-pull" style="background-image: url('./assets/img/hero-img-1.jpg');">
-  <div>
-    <div>
-      <div class="col-12 col-md-11 col-lg-9 col-xl-7 col-xxl-6 text-center text-white w-100">
-        <h2 class="display-3 fw-bold mb-3 bg-light mt-5" style="font-size: 90px; font-weight: bolder; color: black;">One Page Wonder</h2>
-        <p class="lead mb-5 bg-light" style="font-size: 60px; font-weight: bold; color: black;">Will Knock Your Socks Off</p>
-      </div>
-    </div>
-  </div>
-</section>
--->
-
-<div class="pt-4 pb-4 px-0 text-center bg-image rounded-3" style="
-    background-image: url('https://mdbcdn.b-cdn.net/img/new/slides/041.webp');
-    height: 400px;
-  ">
+<div class="pt-4 pb-4 px-0 text-center bg-image rounded-3 mb-4" style="
+    background-image: url('../../website/assets/img/bg.jpg'); background-position: bottom; height: 600px";>
   <div class="mask";>
-    <div class="justify-content-center align-items-center h-100 w-100">
+    <div class="justify-content-center">
       <div class="text-white">
         <h2 class="display-3 fw-bold mb-3 bg-light mt-5" style="font-size: 90px; font-weight: bolder; color: black;">One Page Wonder</h2>
         <p class="lead mb-3 bg-light" style="font-size: 60px; font-weight: bold; color: black;">Will Knock Your Socks Off</p>
