--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,8 +1,9 @@
 <!-- your html code here -->
-<div class="container-fluid">
+<div class="container-fluid col-10">
 <h1>Contact</h1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum adipisci, optio nihil tempore doloribus inventore natus voluptatum aspernatur culpa esse architecto, harum dolor quae placeat quisquam accusamus quis perferendis atque?</p>
-<div class="container me-3 border border-1">
+
+<div class="container border border-1 col-8 bg-light">
 <div class="mb-3">
     <label for="exampleFormControlInput1" class="form-label">Your E-mail</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email">
@@ -15,4 +16,5 @@
   <input class="btn btn-primary" type="submit" value="Submit">
 </div>
 </div>
+
 </div>
