--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,17 +1,20 @@
 <!-- your html code here -->
 <div class="d-flex justify-content-center" >
-    <div class="card mb-3 headingCard" >
+    
+    <div class="card mb-3 mt-3 headingCard" >
         <div class="row g-0">       
             <div class="col-md-8">
                 <div class="card-body">
-                <h5 class="card-title">This First Heading</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <h1 class="card-title">This First Heading <span class="text-secondary">Will Catch Your Eye</span></h1>
+                <p class="card-text headingCard-text">Donec ullamcorper nulla non metus auctor fringilia. Vestibulum id ligula parta felis 
+                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl
+                    consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="../../website/assets/img/1.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="../../website/assets/img/1.jpg" class="img-fluid rounded-circle" alt="...">
             </div>
         </div>
     </div>
+    
 </div>
