--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,6 +1,4 @@
-<!-- your html code here -->
-<div class="d-flex justify-content-center" >
-    
+<div class="d-flex justify-content-center" >    
     <div class="card mb-3 mt-3 headingCard" >
         <div class="row g-0">       
             <div class="col-md-8">
@@ -12,9 +10,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="../../website/assets/img/1.jpg" class="img-fluid rounded-circle" alt="...">
+                <img src="../../website/assets/img/1.jpg" class="img-fluid rounded-circle headingCard-img" alt="...">
             </div>
         </div>
-    </div>
-    
+    </div>    
 </div>
