--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,17 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html Ale</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<div class="d-flex justify-content-center" >    
+    <div class="card mb-3 mt-3 headingCard" >
+        <div class="row g-0">       
+            <div class="col-md-4">
+                <img src="../../website/assets/img/2.jpg" class="img-fluid rounded-circle headingCard-img" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                <h1 class="card-title">The Second Heading <span class="text-secondary">Is Pretty Cool Too.</span></h1>
+                <p class="card-text headingCard-text">Donec ullamcorper nulla non metus auctor fringilia. Vestibulum id ligula parta felis 
+                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl
+                    consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+                </div>
+            </div>            
+        </div>
+    </div>    
+</div>
