--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,27 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+ 
+      <div class="container " >
+       <div class="mx-5 py-4">
+        <h2 > Portfolio</h2>
+          <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe minus placeat quos rem quibusdam, quas cupiditate minima nobis rerum reprehenderit culpa laboriosam ducimus molestias possimus doloribus aperiam a qui quo.</p>
+
+       </div>
+          
+          <div class="row mx-4">
+            <div class="col-4 ">
+                <img src="../../website/assets/img/box.png" class="img-fluid " alt="...">
+                <h5 class="text-primary mt-3">Project name</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non veniam quaerat consequatur pariatur tempora necessitatibus ratione molestias, officia laudantium rem ex eum earum ut vitae quisquam facilis provident cupiditate. Cum?</p>
+            </div>
+            <div class="col-4">
+                <img src="../../website/assets/img/box.png" class="img-fluid " alt="...">
+                <h5 class="text-primary mt-3">Project name</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, blanditiis aliquam. Perspiciatis veniam necessitatibus quod doloremque quam, suscipit fugiat voluptatibus harum incidunt delectus odio architecto, fugit alias dignissimos ut quos?</p>
+            </div>
+            <div class="col-4">
+                <img src="../../website/assets/img/box.png" class="img-fluid " alt="...">
+                <h5 class="text-primary mt-3">Project name</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste iusto magnam modi natus facilis at sequi odit, culpa deserunt, cum unde maiores incidunt omnis laudantium earum vel similique nulla eius.</p>
+            </div>
+          </div>
+     </div>
